--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,7 @@ h6 {
   height: 100vh;
   background: url("../img/hero-bg.png") top right no-repeat;
   background-size: cover;
+  background-position: center center;
   position: relative;
 }
 
