--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,12 +338,12 @@ h6 {
   font-weight: 800;
   line-height: 56px;
   color: #45505b;
-    padding-left: 800px;
+    padding-left: 600px;
     /* align-self: auto; */
 }
 
 #hero p {
-    padding-left: 800px;
+    padding-left: 600px;
   color: #45505b;
   margin: 15px 0 0 0;
   font-size: 26px;
@@ -357,7 +357,7 @@ h6 {
 
 
 #hero .social-links {
-    padding-left: 800px;
+    padding-left: 600px;
   margin-top: 30px;
 }
 
@@ -499,7 +499,7 @@ section {
     padding-bottom: 0px;
 }
 
-.Align{
+.about .section-title p{
   text-align: justify;
 }
 /*--------------------------------------------------------------
@@ -520,7 +520,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #05afbb;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -580,7 +580,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color: #05bb5a;
 }
 .skills
 {
@@ -983,7 +983,7 @@ section {
 }
 
 .services .iconbox-red i {
-  color: #ff5828;
+  color: #47aeff;
 }
 
 .services .iconbox-red:hover .icon i {
@@ -991,7 +991,7 @@ section {
 }
 
 .services .iconbox-red:hover .icon path {
-  fill: #ff5828;
+  fill: #47aeff;
 }
 
 .services .iconbox-teal i {
@@ -1004,6 +1004,10 @@ section {
 
 .services .iconbox-teal:hover .icon path {
   fill: #11dbcf;
+}
+.pyhrmicon{
+  height: 60px;
+  width: 250px;
 }
 
 /*--------------------------------------------------------------
