--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ h6 {
 
 @media (max-width: 768px) {
   #hero {
-    background: url("../img/hero-bg.jpg") top right no-repeat;
+    background: url("../img/hero-bg.png") top right no-repeat;
     background-size: contain;
     background-position: center top;
     
